TASK 3 Kubernetes/httpd-wordpress.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
spec:
  selector:
    matchLabels:
      app: wordpress-mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 20124
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
spec:
  ports:
    - port: 20124
  selector:
    app: wordpress-mysql
---
 
apiVersion: v1
kind: Service
metadata:
  name: wordpress-web
  labels:
    app: wordpress-web
spec:
  ports:
    - port: 20123
  selector:
    app: wordpress-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-web
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 20123
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
 
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-web
spec:
  rules:
  - host: pro2pay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-web
          servicePort: 20123
