TASK 3 Kubernetes/nginx-wordpress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress-mysql
spec:
  ports:
   - protocol: TCP
     port: 20124
  selector:
    app: wordpress-mysql
    tier: database
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress-mysql
spec:
  selector:
    matchLabels:
      app: wordpress-mysql
      tier: database
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-mysql
        tier: database
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 20124
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---

 
apiVersion: v1
kind: Service
metadata:
  name: wordpress-web
  labels:
    app: wordpress-web
spec:
  ports:
    - port: 20123
  selector:
    app: wordpress-web
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-web
  labels:
    app: wordpress-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordpress-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress-web
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wordpress
        ports:
        - containerPort: 20123
          name: wordpress
        volumeMounts:
        - name: wordpress-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: wordpress-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
 
---
apiVersion: extensions/v1beta1  
kind: Ingress
metadata:  
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "wordpress"
  labels:
    app: wordpress-web
spec:  
  tls:
    - hosts:
      - pro2pay.com
      secretName: tls-certificate
  rules:
  - host: pro2pay.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-web
          servicePort: 20123
